--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -16,26 +16,26 @@
   <div class="container">
     <nav class="clearfix">
       <ul class="list-reset">
-        <li><a href="#">Projects.</a></li>
+        <li><a href="#">projects.</a></li>
         <li><a href="#">about.</a></li>
         <li><a href="#">contact.</a></li>
       </ul>
     </nav>
   </div>
-    <div class="container2">
-      <h2>projects</h2>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor felis dui, eget convallis eros luctus non. Fusce interdum ullamcorper leo, sit amet molestie lorem congue id. Curabitur vel sem diam. Maecenas aliquet leo dolor. Proin nec arcu finibus, pellentesque diam ut, consectetur ipsum. Praesent ornare aliquet tellus, et dapibus felis euismod vitae. Suspendisse non sollicitudin ex. Nullam eget fermentum massa. Ut nulla nulla, facilisis in diam in, mollis pellentesque justo. Proin at lacus a ligula varius vehicula a sit amet enim. .</p>
-    </div>
+      <div class="container2">
+        <h2>projects</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor felis dui, eget convallis eros luctus non. Fusce interdum ullamcorper leo, sit amet molestie lorem congue id. Curabitur vel sem diam. Maecenas aliquet leo dolor. Proin nec arcu finibus, pellentesque diam ut, consectetur ipsum. Praesent ornare aliquet tellus, et dapibus felis euismod vitae. Suspendisse non sollicitudin ex. Nullam eget fermentum massa. Ut nulla nulla, facilisis in diam in, mollis pellentesque justo. Proin at lacus a ligula varius vehicula a sit amet enim. .</p>
+      </div>
 
-  <div class="container1 clearfix">
-    <header class="name">
-      <h2>Nikola Pantelic - last 20. years</h2>
-    </header>
-     <section>
-       <article class="col-1-1">
-         <h3>IT start</h3>
-         <p>It svet svasta nesto liquet tellus, et dapibus felis euismod vitae. Suspendisse non sollicitudin ex. Nullam eget fermentum massa. Ut nulla nulla, facilisis in diam in, mollis pellentesque justo. Proin at lacus a ligula varius vehicula a sit amet enim. Maecenas sollicitudin nulla lobortis semper molestie. </p>
-       </article>
+   <div class="container1 clearfix">
+     <header class="name">
+       <h2>Nikola Pantelic - last 20. years</h2>
+     </header>
+      <section>
+        <article class="col-1-1">
+          <h3>IT start</h3>
+          <p>After becoming Microsoft System engineer, I started my IT carrier in Parking Servis Beograd. I was part of the team that implemented new ZONE system of parking on Belgrade territory. Maintenance of the equipment as well as system administration was my main responsibility. <br>Five years after, I joined Celebrity Cruises and for first 3 years I was working in IT department.   Ships day to day operations ware my main responsibilities. That includes: satellite maintenance, ships network, servers, and all the users and their stations. </p>
+        </article>
 
        <article class="col-1-2">
          <h3>Marketing/Retail</h3>
