--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -33,18 +33,18 @@
      </header>
       <section>
         <article class="col-1-1">
-          <h3>IT start</h3>
+          <h3>IT Roots</h3>
           <p>After becoming Microsoft System engineer, I started my IT carrier in Parking Servis Beograd. I was part of the team that implemented new ZONE system of parking on Belgrade territory. Maintenance of the equipment as well as system administration was my main responsibility. <br>Five years after, I joined Celebrity Cruises and for first 3 years I was working in IT department.   Ships day to day operations ware my main responsibilities. That includes: satellite maintenance, ships network, servers, and all the users and their stations. </p>
         </article>
 
        <article class="col-1-2">
          <h3>Marketing/Retail</h3>
-         <p>Apple Store Manager</p>
+         <p>Managing Apple Store and Internet Cafe, sales and support for 7 years. Teaching Apple courses. Interviewing and training new employees. Developing new marketing material and strategies. </p>
       </article>
 
       <article class="col-1-3">
         <h3><a href="http://whiteowlhostel.com">Hospitality</a></h3>
-         <p>HostelIt svet svasta nesto liquet tellus, et dapibus felis euismod vitae. Suspendisse non sollicitudin ex. Nullam eget fermentum massa. Ut nulla nulla, facilisis in diam in, </p>
+         <p><b>Started a brand new hostel in Belgrade downtown. With lots of dedication and hard work, WOH became one of the best hostels in Belgrade in just 3 years.</b></p>
       </article>
    </section>
  </div>
