--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -48,14 +48,9 @@
       </article>
    </section>
  </div>
-</div>
-
-
-
-
 <div>
    <div class="forme clearfix">
-       <form method="get" action="poslato.html">
+       <form method="get">
          <h3>Contact me</h3>
           <div>
             <label for="UserName">Your name</label>
