--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -34,7 +34,7 @@
       <section>
         <article class="col-1-1">
           <h3>IT Roots</h3>
-          <p>After becoming Microsoft System engineer, I started my IT carrier in Parking Servis Beograd. I was part of the team that implemented new ZONE system of parking on Belgrade territory. Maintenance of the equipment as well as system administration was my main responsibility. <br>Five years after, I joined Celebrity Cruises and for first 3 years I was working in IT department.   Ships day to day operations ware my main responsibilities. That includes: satellite maintenance, ships network, servers, and all the users and their stations. </p>
+          <p>After becoming Microsoft System engineer, I started my IT carrier in Parking Servis Beograd. I was part of the team that implemented new -ZONE- system of parking in Belgrade. Maintenance of the equipment as well as system administration was my main responsibility. <br>Five years after, I joined Celebrity Cruises, and for the first 3 years there, I was working in IT department as an officer, keeping the ship operationl. </p>
         </article>
 
        <article class="col-1-2">
@@ -43,8 +43,11 @@
       </article>
 
       <article class="col-1-3">
-        <h3><a href="http://whiteowlhostel.com">Hospitality</a></h3>
-         <p><b>Started a brand new hostel in Belgrade downtown. With lots of dedication and hard work, WOH became one of the best hostels in Belgrade in just 3 years.</b></p>
+        <!--<h3><a href="http://whiteowlhostel.com">Hospitality</a></h3>-->
+         <p><b><br>
+           <br>
+           <br>
+           <br>Started a brand new hostel in Belgrade downtown. With lots of dedication and hard work, WOH became one of the best hostels in Belgrade in just 3 years.</b></p>
       </article>
    </section>
  </div>
