--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="main-header">
-      <h1 class="logo"><a href="#"><img src="img/logo1.png"></a></h1>
+      <h1 class="logo"><a href="#"><img src="img/logo1.png" alt="Logo image"></a></h1>
   </header>
   <div class="container">
     <nav class="clearfix">
@@ -43,17 +43,13 @@
       </article>
 
       <article class="col-1-3">
-        <!--<h3><a href="http://whiteowlhostel.com">Hospitality</a></h3>-->
-         <p><b><br>
-           <br>
-           <br>
-           <br>Started a brand new hostel in Belgrade downtown. With lots of dedication and hard work, WOH became one of the best hostels in Belgrade in just 3 years.</b></p>
+          <p><b><br><br><br><br><a href="http://whiteowlhostel.com" src="img/woh1.png">Started a brand new hostel in Belgrade downtown. With lots of dedication and hard work, WOH became one of the best hostels in Belgrade in just 3 years.</a></b></p>
       </article>
    </section>
  </div>
 <div>
-   <div class="forme clearfix">
-       <form method="get">
+   <div> class="forme clearfix">
+       <form> method="get">
          <h3>Contact me</h3>
           <div>
             <label for="UserName">Your name</label>
