--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -22,14 +22,18 @@
       </ul>
     </nav>
   </div>
+  <header class="name">
+    <h2>Nikola Pantelic - last 20. years</h2>
+  </header>
+
       <div class="container2">
-        <h2>projects</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempor felis dui, eget convallis eros luctus non. Fusce interdum ullamcorper leo, sit amet molestie lorem congue id. Curabitur vel sem diam. Maecenas aliquet leo dolor. Proin nec arcu finibus, pellentesque diam ut, consectetur ipsum. Praesent ornare aliquet tellus, et dapibus felis euismod vitae. Suspendisse non sollicitudin ex. Nullam eget fermentum massa. Ut nulla nulla, facilisis in diam in, mollis pellentesque justo. Proin at lacus a ligula varius vehicula a sit amet enim. .</p>
+        <h2>Remote Year<a href="http://www.remoyear.com"></a></h2>
+        <p>Responsible for all setup and on-the-ground logistics in Remote Year programs of 40-70 remote working professionals. Work directly with Regional Operations Director to source and secure accommodation and workspace. Additional responsibilities include connecting with local entrepreneurs and startups, troubleshooting networking issues, and creating a welcoming environment for a diverse group of participants each month. Supported more than 600 remote workers.</p>
       </div>
 
    <div class="container1 clearfix">
      <header class="name">
-       <h2>Nikola Pantelic - last 20. years</h2>
+       <h2>=======================================</h2>
      </header>
       <section>
         <article class="col-1-1">
@@ -43,13 +47,13 @@
       </article>
 
       <article class="col-1-3">
-          <p><b><br><br><br><br><a href="http://whiteowlhostel.com" src="img/woh1.png">Started a brand new hostel in Belgrade downtown. With lots of dedication and hard work, WOH became one of the best hostels in Belgrade in just 3 years.</a></b></p>
+          <p><b><br><br><br><br><a href="http://whiteowlhostel.com">Started a brand new hostel in Belgrade downtown. I took three year to become one of the most recognized brands in Belhrade hospltality world. .</a></b></p>
       </article>
    </section>
  </div>
 <div>
-   <div> class="forme clearfix">
-       <form> method="get">
+   <div class="forme clearfix">
+       <form method="get">
          <h3>Contact me</h3>
           <div>
             <label for="UserName">Your name</label>
