--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -23,11 +23,11 @@
     </nav>
   </div>
   <header class="name">
-    <h2>Nikola Pantelic - last 20. years</h2>
+    <h2><b>Nikola Pantelic<br> since 2000...</b></h2>
   </header>
 
       <div class="container2">
-        <h2>Remote Year<a href="http://www.remoyear.com"></a></h2>
+        <h3><a href="http://www.remoyear.com">Remote Year</a></h3>
         <p>Responsible for all setup and on-the-ground logistics in Remote Year programs of 40-70 remote working professionals. Work directly with Regional Operations Director to source and secure accommodation and workspace. Additional responsibilities include connecting with local entrepreneurs and startups, troubleshooting networking issues, and creating a welcoming environment for a diverse group of participants each month. Supported more than 600 remote workers.</p>
       </div>
 
@@ -37,7 +37,7 @@
      </header>
       <section>
         <article class="col-1-1">
-          <h3>IT Roots</h3>
+          <h3><a href="http://www.celebritycruises.com">IT Roots</a></h3>
           <p>After becoming Microsoft System engineer, I started my IT carrier in Parking Servis Beograd. I was part of the team that implemented new -ZONE- system of parking in Belgrade. Maintenance of the equipment as well as system administration was my main responsibility. <br>Five years after, I joined Celebrity Cruises, and for the first 3 years there, I was working in IT department as an officer, keeping the ship operationl. </p>
         </article>
 
