--- a/Nedelja1/index.html
+++ b/Nedelja1/index.html
@@ -28,7 +28,7 @@
 
       <div class="container2">
         <h3><a href="http://www.remoyear.com">Remote Year</a></h3>
-        <p>Responsible for all setup and on-the-ground logistics in Remote Year programs of 40-70 remote working professionals. Work directly with Regional Operations Director to source and secure accommodation and workspace. Additional responsibilities include connecting with local entrepreneurs and startups, troubleshooting networking issues, and creating a welcoming environment for a diverse group of participants each month. Supported more than 600 remote workers.</p>
+        <p>Responsible for all setup and on-the-ground logistics in Remote Year programs of 40-70 remote working professionals! Work directly with Regional Operations Director to source and secure accommodation and workspace. Additional responsibilities include connecting with local entrepreneurs and startups, troubleshooting networking issues, and creating a welcoming environment for a diverse group of participants each month. Supported more than 600 remote workers.</p>
       </div>
 
    <div class="container1 clearfix">
